# auth-serve

./: .gitignore  Makefile  README.md  docker-compose.yml
auth-serve/: main.py  pyproject.toml  utils.py
auth-serve/api/: dependency.py
auth-serve/api/routes/: __init__.py  auth.py  jwks.py  permission.py  project.py  role.py  role_permission.py  user.py  validate.py
auth-serve/auth/: authentication.py  authorization.py  caching.py  keystore.py  rbac.py
auth-serve/config/: settings.py
auth-serve/db/: engine.py
auth-serve/db/tables/: __init__.py  users.py
auth-serve/models/: __init__.py  auth.py  organization.py  rbac.py  users.py
auth-serve/utils/: __init__.py  redis_client.py  seed.py
example/: README.md  main.py  pyproject.toml
example/billing/: dependency.py  router.py
